# gameboy

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/architecture/: bus.rs  cpu.rs  cpu_tests.rs  instructions_set.rs  mem.rs  mod.rs
src/cartridge/: c_type.rs  cartridge.rs  cgb.rs  header.rs  licensee.rs  mod.rs  old_licensee.rs  region.rs  rom_size.rs  sgb.rs
src/tests/: cpu_tests.rs  instructions_test.rs  mem_test.rs  mod.rs  rom_size_test.rs
utils/: licensee.py  licensee.txt  licensee_rust.txt
