[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
serde = {version = "1.0.197", features = ["derive"]}
